# trendy

./: .gitignore  README.md  app.py  arxiv.py  components.json  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: fly-deploy.yaml  python-app.yml
data_sources/: arxiv.py  test_arxiv.py  test_trends.py
frontends/arxiv/: index.html
frontends/arxiv/src/: output.css
gpts/: gpt.schema  instructions.txt
