[tool.poetry]
name = "trendy"
version = "0.1.0"
description = ""
authors = ["Ekaterina Krivich <ekaterinak@heathmont.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^21.2.0"
Flask = "^3.0.0"
bs4 = "^0.0.1"
jinja2 = "^3.1.3"
requests = "^2.31.0"
flake8 = "^7.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
